// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadOtherId initially renders the page without any filecards 1`] = `
<QuestionPage
  formState={Object {}}
  nextPage="/claims/ssn?claim_id=12345"
  onSave={[Function]}
  title="Verify your identity"
>
  <FormLabel>
    Upload an identification document
  </FormLabel>
  <div
    className="margin-top-2 usa-intro"
  >
    Upload one of the following:
    <ul>
      <li
        key="0"
      >
        Document 1
      </li>
      <li
        key="1"
      >
        Document 2, or
      </li>
      <li
        key="2"
      >
        Document 3
      </li>
    </ul>
  </div>
  <FileUploadDetails />
  <FileCardList
    addAnotherFileButtonText="Choose another file"
    addFirstFileButtonText="Choose a file"
    fileHeadingPrefix="File"
    files={Array []}
    setFiles={[Function]}
  />
</QuestionPage>
`;

exports[`UploadOtherId when the user uploads files renders filecards for the files 1`] = `
<QuestionPage
  formState={Object {}}
  nextPage="/claims/ssn?claim_id=12345"
  onSave={[Function]}
  title="Verify your identity"
>
  <FormLabel>
    Upload an identification document
  </FormLabel>
  <div
    className="margin-top-2 usa-intro"
  >
    Upload one of the following:
    <ul>
      <li
        key="0"
      >
        Document 1
      </li>
      <li
        key="1"
      >
        Document 2, or
      </li>
      <li
        key="2"
      >
        Document 3
      </li>
    </ul>
  </div>
  <FileUploadDetails />
  <FileCardList
    addAnotherFileButtonText="Choose another file"
    addFirstFileButtonText="Choose a file"
    fileHeadingPrefix="File"
    files={
      Array [
        Object {
          "file": File {},
          "id": "File1",
        },
        Object {
          "file": File {},
          "id": "File2",
        },
        Object {
          "file": File {},
          "id": "File3",
        },
      ]
    }
    setFiles={[Function]}
  />
</QuestionPage>
`;
